Change justify-content to flex-start in collapsed sidebar menu to prevent icon position jumping

--- a/kurban2026.css
+++ b/kurban2026.css
@@ -1784,7 +1784,7 @@ body {
   margin: 0;
   margin-left: 20px;
   padding: 0;
-  justify-content: center;
+  justify-content: flex-start;
   width: 40px;
   height: 40px;
 }
